# webrtc-kvm

./: .gitignore  README.md  meson.build  meson_options.txt
src/: defines.h  global.h  meson.build  webrtc_kvm.h
src/abstract/: async-runner.cpp  async-runner.h  buffer-queue.cpp  buffer-queue.h  buffer.cpp  buffer.h  loop.cpp  loop.h  meson.build  plugin.cpp  plugin.h  resource_release.h  signals.cpp  signals.h
src/algo/: base64.cpp  base64.h  blob.cpp  blob.h  crc32.cpp  crc32.h  hash.cpp  hash.h  hash_algo.cpp  meson.build  url-net.cpp  url.cpp  url.h  uuid.cpp  uuid.h
src/client/: main.cpp  meson.build
src/client/login/: login.cpp  login.h  meson.build
src/client/screen/: connection.cpp  display.cpp  event.cpp  handshake.cpp  http.cpp  login.cpp  meson.build  screen.cpp  screen.h  slots.cpp  webrtc.cpp
src/client/screen/input/: channel.cpp  event.cpp  fill.cpp  input.cpp  input.h  map.cpp  meson.build  qt_map.cpp  x11_map.cpp
src/client/screen/video/: deinit.cpp  format.cpp  initialize.cpp  meson.build  receive.cpp  stream.cpp  swscale.cpp  track.cpp  video.cpp  video.h
src/compress/: brotli.cpp  bzip2.cpp  compress.cpp  compress.h  find.cpp  meson.build  process.cpp  property.cpp  register.cpp  zlib.cpp  zstd.cpp
src/config/: config.cpp  configs.h  default.cpp  meson.build
src/gadget/: gadget.h  gadget_ctx.h  initialize.cpp  input.cpp  meson.build  string.cpp
src/gadget/core/: base.cpp  config.cpp  config_string.cpp  function.cpp  gadget.cpp  gadget.h  gadget_config.h  gadget_config_string.h  gadget_function.h  gadget_string.h  internal.h  meson.build  shared.h  string.cpp
src/gadget/functions/: functions.cpp  gadget_acm.h  gadget_ecm.h  gadget_eem.h  gadget_ether.h  gadget_ffs.h  gadget_hid.h  gadget_mass.h  gadget_ncm.h  gadget_net.h  gadget_rndis.h  gadget_serial.h  gadget_tty.h  hid.cpp  meson.build
src/http/: http.h  httpd.cpp  meson.build
src/http/auth/: authorization.cpp  meson.build  no_pam.cpp  pam.cpp  password.cpp
src/http/core/: compress.cpp  connection.cpp  exceptions.cpp  generic.cpp  header.cpp  meson.build  post.cpp  process.cpp  restful.cpp  static.cpp
src/http/data/: meson.build  methods.h  mime.cpp  mime.h  string.cpp  versions.h
src/http/handlers/: auth_check.cpp  auth_info.cpp  auth_login.cpp  auth_logout.cpp  exit.cpp  input_get_key_map.cpp  input_get_mouse_mode.cpp  input_set_mouse_mode.cpp  meson.build  static.cpp  stream_start.cpp  stream_status.cpp  stream_stop.cpp  webrtc_get_sdp.cpp  webrtc_new.cpp  webrtc_set_sdp.cpp
src/input/: descriptor.cpp  hid.cpp  hid.h  hid_map.cpp  input.cpp  input.h  input_ctx.h  meson.build  print.cpp  string.cpp  web_key_map.cpp
src/lib/: configfile.cpp  configfile.h  devices.cpp  exception.h  exceptions.cpp  files.cpp  files.h  folder_reader.cpp  full_io.cpp  full_io.h  log.cpp  log.h  meson.build  modules.cpp  modules.h  path.c  path.cpp  path.h  readable.cpp  readable.h  strings.cpp  strings.h
src/main/: builtin.h  initialize.cpp  main.cpp  meson.build  rate_thread.cpp
src/plugins/: meson.build
src/plugins/compress/: brotli.cpp  bzip2.cpp  meson.build  zlib.cpp  zstd.cpp
src/plugins/video/: meson.build
src/plugins/video/ffmpeg/: ffmpeg.h  meson.build
src/plugins/video/ffmpeg/swscale/: factory.cpp  init.cpp  meson.build  process.cpp  swscale.h
src/plugins/video/noop/: factory.cpp  meson.build  noop.h  pipe.cpp  sink.cpp
src/plugins/video/posix/: factory.cpp  initialize.cpp  meson.build  open.cpp  posix.h  start.cpp
src/plugins/video/rkmpp/: config_list.cpp  decoder.cpp  encoder.cpp  encoder_init.cpp  factory.cpp  fourcc.cpp  init.cpp  meson.build  process.cpp  rkmpp.h  start.cpp
src/plugins/video/rkrga/: buffer.cpp  config.cpp  factory.cpp  fourcc.cpp  meson.build  process.cpp  rkrga.h  start.cpp  string.cpp
src/plugins/video/v4l2/: meson.build
src/plugins/video/v4l2/cap/: edid.cpp  factory.cpp  link.cpp  process.cpp  subdev.cpp  v4l2_cap.h
src/plugins/video/v4l2/dev/: alloc.cpp  config.cpp  dequeue.cpp  dmabuf.cpp  link.cpp  meson.build  uptr.cpp  v4l2_dev.h
src/plugins/video/v4l2/m2m/: decoder.cpp  factory.cpp  output.cpp  queue.cpp
src/plugins/video/v4l2/media/: device.cpp  device.h  entity.h  (+6 more)
src/string/: fourcc.cpp  h264_level.cpp  h264_profile.cpp  meson.build  rtc.cpp  strings.h  v4l2_buf_type.cpp  v4l2_memory.cpp
src/test/: meson.build  test.cpp  test.h
src/test/tests/: meson.build  path.cpp  readable.cpp  string.cpp
src/video/: meson.build  stream.h
src/video/factory/: config.cpp  create.cpp  meson.build  register.cpp
src/video/ffmpeg/: ffmpeg.h  meson.build
src/video/ffmpeg/shared/: format.cpp  meson.build
src/video/ffmpeg/swscale/: config.cpp  factory.cpp
src/video/link/: bind.cpp  create.cpp  init.cpp  meson.build
src/video/list/: add.cpp  find.cpp  meson.build
src/video/noop/: factory.cpp  meson.build  noop.h
src/video/old/: initialize.cpp  setup.cpp  stream.cpp
src/video/posix/: config.cpp  connection.cpp  factory.cpp  meson.build  posix.h  read.cpp  write.cpp
src/video/rkmpp/: config.cpp  decoder_init.cpp  factory.cpp  format.cpp  fourcc.cpp  meson.build  process.cpp  rkmpp.h
src/video/stream/: config.cpp  device.cpp  event.cpp  generic.cpp  input.cpp  link.cpp  meson.build  poll.cpp  start.cpp  stop.cpp  string.cpp
src/video/v4l2/: media.cpp  meson.build  v4l2.cpp  v4l2.h
src/video/v4l2/cap/: factory.cpp  init.cpp  link.cpp  meson.build  process.cpp  start.cpp  v4l2_cap.h
src/video/v4l2/dev/: alloc.cpp  buffer.cpp  config.cpp  dequeue.cpp  device.cpp  format.cpp  init.cpp  link.cpp  match.cpp  meson.build  mmap.cpp  queue.cpp  v4l2_dev.h
src/video/v4l2/m2m/: config.cpp  encoder.cpp  factory.cpp  h264.cpp  init.cpp  input.cpp  link.cpp  meson.build  output.cpp  start.cpp  v4l2_m2m.h
src/video/v4l2/media/: entity.cpp  entity_desc.cpp  interface.cpp  meson.build  pad.h  topology.cpp  topology.h
src/webrtc/: bind.cpp  datachannel.cpp  enable.cpp  endpoint.cpp  event.cpp  factory.cpp  gathering.cpp  initialize.cpp  input.cpp  meson.build  sdp.cpp  start.cpp  state.cpp  stream.cpp  track.cpp  webrtc.h
(+41 files in other folders)
