webrtc_kvm_src_http = files([
	'httpd.cpp',
])
subdir('auth')
webrtc_kvm_src_http += webrtc_kvm_src_http_auth
subdir('core')
webrtc_kvm_src_http += webrtc_kvm_src_http_core
subdir('handlers')
webrtc_kvm_src_http += webrtc_kvm_src_http_handlers
subdir('data')
webrtc_kvm_src_http += webrtc_kvm_src_http_data
