webrtc_kvm_src_video = files([])
subdir('factory')
webrtc_kvm_src_video += webrtc_kvm_src_video_factory
subdir('link')
webrtc_kvm_src_video += webrtc_kvm_src_video_link
subdir('list')
webrtc_kvm_src_video += webrtc_kvm_src_video_list
subdir('stream')
webrtc_kvm_src_video += webrtc_kvm_src_video_stream
