webrtc_kvm_src_plugins_video = files([])
video_plugin_inc = inc + include_directories('../../video')
subdir('ffmpeg')
webrtc_kvm_src_plugins_video += webrtc_kvm_src_plugins_video_ffmpeg
subdir('noop')
webrtc_kvm_src_plugins_video += webrtc_kvm_src_plugins_video_noop
subdir('posix')
webrtc_kvm_src_plugins_video += webrtc_kvm_src_plugins_video_posix
subdir('v4l2')
webrtc_kvm_src_plugins_video += webrtc_kvm_src_plugins_video_v4l2
subdir('rkmpp')
webrtc_kvm_src_plugins_video += webrtc_kvm_src_plugins_video_rkmpp
